# urfu-cv-2-lab

./: .gitmodules  CMakeLists.txt
cmake/: FindGLI_.cmake  FindSpdlog.cmake
src/core/: lyssa.cpp  lyssa.h  shader.cpp  shader.h
src/custom/: CMakeLists.txt
src/custom/debug/: CMakeLists.txt
src/custom/debug/src/: debug.cpp  debug.h
src/custom/dense_optical_flow/: CMakeLists.txt
src/custom/dense_optical_flow/src/: optical_flow.cpp
src/custom/optical_flow/src/: optical_flow.h
src/custom/optical_flow_new/: CMakeLists.txt
src/custom/optical_flow_new/src/: optical_flow.cpp
src/custom/src/: optical_flow.cpp
